@@ -5,13 +5,9 @@ module Jquery
     class InstallGenerator < Rails::Generators::Base
       extend TemplatePath
 
-      def copy_initializer_files
-        template "config/initializers/jquery.rb.tt", "config/initializers/jquery.rb"
-      end
-
       def download_jquery_files
-        %w(controls.js dragdrop.js effects.js prototype.js rails.js).each do |prototype|
-          remove_file "public/javascripts/#{prototype}"
+        %w(controls.js dragdrop.js effects.js prototype.js rails.js).each do |js|
+          remove_file "public/javascripts/#{js}"
         end
 
         # Downloading latest jQuery.min
@@ -19,6 +15,10 @@ module Jquery
 
         # Downloading latest jQuery drivers
         get "http://github.com/rails/jquery-ujs/raw/master/src/rails.js", "public/javascripts/rails.js"
+      end
+      
+      def show_readme
+        readme "README"
       end
     end
   end
